--- a/.gitattributes
+++ b/.gitattributes
@@ -7,3 +7,4 @@
 *.ipynb filter=lfs diff=lfs merge=lfs -text
 *.lock filter=lfs diff=lfs merge=lfs -text
 *.toml filter=lfs diff=lfs merge=lfs -text
+*.sh filter=lfs diff=lfs merge=lfs -text
