--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
+data/DHFR/*.csv filter=lfs diff=lfs merge=lfs -text
+data/TFBIND8/*.npy filter=lfs diff=lfs merge=lfs -text
 *.gitignore filter=lfs diff=lfs merge=lfs -text
 *.md filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
@@ -8,3 +10,4 @@
 *.lock filter=lfs diff=lfs merge=lfs -text
 *.toml filter=lfs diff=lfs merge=lfs -text
 *.sh filter=lfs diff=lfs merge=lfs -text
+*.npy filter=lfs diff=lfs merge=lfs -text
