--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 data/DHFR/*.csv filter=lfs diff=lfs merge=lfs -text
 data/TFBIND8/*.npy filter=lfs diff=lfs merge=lfs -text
+data/TFBIND8/*.csv filter=lfs diff=lfs merge=lfs -text
 *.gitignore filter=lfs diff=lfs merge=lfs -text
 *.md filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
