--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,8 @@
 data/DHFR/*.csv filter=lfs diff=lfs merge=lfs -text
 data/TFBIND8/*.npy filter=lfs diff=lfs merge=lfs -text
 data/TFBIND8/*.csv filter=lfs diff=lfs merge=lfs -text
+data/GFP/*.csv filter=lfs diff=lfs merge=lfs -text
+models/*.pt filter=lfs diff=lfs merge=lfs -text
 *.gitignore filter=lfs diff=lfs merge=lfs -text
 *.md filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
@@ -12,3 +14,4 @@ data/TFBIND8/*.csv filter=lfs diff=lfs merge=lfs -text
 *.toml filter=lfs diff=lfs merge=lfs -text
 *.sh filter=lfs diff=lfs merge=lfs -text
 *.npy filter=lfs diff=lfs merge=lfs -text
+*.pt filter=lfs diff=lfs merge=lfs -text
