--- a/.gitattributes
+++ b/.gitattributes
@@ -1,12 +1,17 @@
 data/DHFR/*.csv filter=lfs diff=lfs merge=lfs -text
 data/TFBIND8/*.npy filter=lfs diff=lfs merge=lfs -text
 data/TFBIND8/*.csv filter=lfs diff=lfs merge=lfs -text
-data/GFP/*.csv filter=lfs diff=lfs merge=lfs -text
 models/*.pt filter=lfs diff=lfs merge=lfs -text
+data/GFP/*.csv filter=lfs diff=lfs merge=lfs -text
 data/GFP/mutations_7/percentile_0.1_0.3/*.csv filter=lfs diff=lfs merge=lfs -text
 data/GFP/mutations_6/percentile_0.2_0.4/*.csv filter=lfs diff=lfs merge=lfs -text
 data/GFP/mutations_0/percentile_0.5_0.6/*.csv filter=lfs diff=lfs merge=lfs -text
 data/GFP/mutations_0/percentile_0.0_1.0/*.csv filter=lfs diff=lfs merge=lfs -text
+data/AAV/*.csv filter=lfs diff=lfs merge=lfs -text
+data/AAV/mutations_7/percentile_0.1_0.3/*.csv filter=lfs diff=lfs merge=lfs -text
+data/AAV/mutations_6/percentile_0.2_0.4/*.csv filter=lfs diff=lfs merge=lfs -text
+data/AAV/mutations_0/percentile_0.5_0.6/*.csv filter=lfs diff=lfs merge=lfs -text
+data/AAV/mutations_0/percentile_0.0_1.0/*.csv filter=lfs diff=lfs merge=lfs -text
 *.gitignore filter=lfs diff=lfs merge=lfs -text
 *.md filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
