--- a/.gitattributes
+++ b/.gitattributes
@@ -14,6 +14,20 @@ data/AAV/mutations_0/percentile_0.5_0.6/*.csv filter=lfs diff=lfs merge=lfs -tex
 data/AAV/mutations_0/percentile_0.0_1.0/*.csv filter=lfs diff=lfs merge=lfs -text
 data/TFBIND10/*.csv filter=lfs diff=lfs merge=lfs -text
 data/TFBIND10/*.npy filter=lfs diff=lfs merge=lfs -text
+data/AAV/surrogate_training_data.csv filter=lfs diff=lfs merge=lfs -text
+data/DHFR/surrogate_training_data.csv filter=lfs diff=lfs merge=lfs -text
+data/GFP/surrogate_training_data.csv filter=lfs diff=lfs merge=lfs -text
+data/TFBIND8/surrogate_training_data.csv filter=lfs diff=lfs merge=lfs -text
+data/TFBIND10/surrogate_training_data.csv filter=lfs diff=lfs merge=lfs -text
+models/AAV_prior.pt filter=lfs diff=lfs merge=lfs -text
+models/AAV_surrogate_cnn.pt filter=lfs diff=lfs merge=lfs -text
+models/DHFR_surrogate_nn.pt filter=lfs diff=lfs merge=lfs -text
+models/GFP_prior.pt filter=lfs diff=lfs merge=lfs -text
+models/GFP_surrogate_cnn.pt filter=lfs diff=lfs merge=lfs -text
+models/TFBIND10_surrogate_nn.pt filter=lfs diff=lfs merge=lfs -text
+models/TFBIND8_surrogate_nn.pt filter=lfs diff=lfs merge=lfs -text
+models/aav_cnn_oracle.pt filter=lfs diff=lfs merge=lfs -text
+models/gfp_cnn_oracle.pt filter=lfs diff=lfs merge=lfs -text
 *.gitignore filter=lfs diff=lfs merge=lfs -text
 *.md filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
