--- a/.gitattributes
+++ b/.gitattributes
@@ -30,6 +30,7 @@ models/aav_cnn_oracle.pt filter=lfs diff=lfs merge=lfs -text
 models/gfp_cnn_oracle.pt filter=lfs diff=lfs merge=lfs -text
 models/AAV_tcnn_prior.pt filter=lfs diff=lfs merge=lfs -text
 models/GFP_tcnn_prior.pt filter=lfs diff=lfs merge=lfs -text
+models/AAV_rnn_prior.pt filter=lfs diff=lfs merge=lfs -text
 *.gitignore filter=lfs diff=lfs merge=lfs -text
 *.md filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
