--- a/.gitattributes
+++ b/.gitattributes
@@ -28,6 +28,8 @@ models/TFBIND10_surrogate_nn.pt filter=lfs diff=lfs merge=lfs -text
 models/TFBIND8_surrogate_nn.pt filter=lfs diff=lfs merge=lfs -text
 models/aav_cnn_oracle.pt filter=lfs diff=lfs merge=lfs -text
 models/gfp_cnn_oracle.pt filter=lfs diff=lfs merge=lfs -text
+data/TRPB/four-site_simplified_AA_data.csv filter=lfs diff=lfs merge=lfs -text
+data/TRPB/surrogate_training_data.csv filter=lfs diff=lfs merge=lfs -text
 *.gitignore filter=lfs diff=lfs merge=lfs -text
 *.md filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
