--- a/.gitattributes
+++ b/.gitattributes
@@ -35,6 +35,7 @@ models/GFP_FL_surrogate.pt filter=lfs diff=lfs merge=lfs -text
 models/DHFR_FL_surrogate_nn.pt filter=lfs diff=lfs merge=lfs -text
 models/TRPB_FL_surrogate_nn.pt filter=lfs diff=lfs merge=lfs -text
 models/TRPB_surrogate_nn.pt filter=lfs diff=lfs merge=lfs -text
+models/GFP_FL_prior.pt filter=lfs diff=lfs merge=lfs -text
 *.gitignore filter=lfs diff=lfs merge=lfs -text
 *.md filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
