--- a/.gitattributes
+++ b/.gitattributes
@@ -36,6 +36,9 @@ models/DHFR_FL_surrogate_nn.pt filter=lfs diff=lfs merge=lfs -text
 models/TRPB_FL_surrogate_nn.pt filter=lfs diff=lfs merge=lfs -text
 models/TRPB_surrogate_nn.pt filter=lfs diff=lfs merge=lfs -text
 models/GFP_FL_prior.pt filter=lfs diff=lfs merge=lfs -text
+data/TFBIND8/tf_bind_8.csv filter=lfs diff=lfs merge=lfs -text
+data/TFBIND8/FL_surrogate_training_data.csv filter=lfs diff=lfs merge=lfs -text
+models/TFBIND8_FL_surrogate_nn.pt filter=lfs diff=lfs merge=lfs -text
 *.gitignore filter=lfs diff=lfs merge=lfs -text
 *.md filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
