--- a/.gitattributes
+++ b/.gitattributes
@@ -39,6 +39,10 @@ models/GFP_FL_prior.pt filter=lfs diff=lfs merge=lfs -text
 data/TFBIND8/tf_bind_8.csv filter=lfs diff=lfs merge=lfs -text
 data/TFBIND8/FL_surrogate_training_data.csv filter=lfs diff=lfs merge=lfs -text
 models/TFBIND8_FL_surrogate_nn.pt filter=lfs diff=lfs merge=lfs -text
+models/AAV_FL_surrogate.pt filter=lfs diff=lfs merge=lfs -text
+models/AAV_FL_prior.pt filter=lfs diff=lfs merge=lfs -text
+data/AAV/FL_surrogate_training_data.csv filter=lfs diff=lfs merge=lfs -text
+data/AAV/ground_truth.csv filter=lfs diff=lfs merge=lfs -text
 *.gitignore filter=lfs diff=lfs merge=lfs -text
 *.md filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
