--- a/.gitattributes
+++ b/.gitattributes
@@ -46,6 +46,8 @@ data/AAV/ground_truth.csv filter=lfs diff=lfs merge=lfs -text
 models/DHFR_FL_surrogate_gp.pt filter=lfs diff=lfs merge=lfs -text
 models/TRPB_FL_surrogate_gp.pt filter=lfs diff=lfs merge=lfs -text
 models/TFBIND8_FL_surrogate_gp.pt filter=lfs diff=lfs merge=lfs -text
+models/AAV_surrogate_gp.pt filter=lfs diff=lfs merge=lfs -text
+models/AAV_FL_surrogate_gp.pt filter=lfs diff=lfs merge=lfs -text
 *.gitignore filter=lfs diff=lfs merge=lfs -text
 *.md filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
