--- a/.gitattributes
+++ b/.gitattributes
@@ -48,6 +48,7 @@ models/TRPB_FL_surrogate_gp.pt filter=lfs diff=lfs merge=lfs -text
 models/TFBIND8_FL_surrogate_gp.pt filter=lfs diff=lfs merge=lfs -text
 models/AAV_surrogate_gp.pt filter=lfs diff=lfs merge=lfs -text
 models/AAV_FL_surrogate_gp.pt filter=lfs diff=lfs merge=lfs -text
+models/GFP_surrogate_gp.pt filter=lfs diff=lfs merge=lfs -text
 *.gitignore filter=lfs diff=lfs merge=lfs -text
 *.md filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
