--- a/.gitattributes
+++ b/.gitattributes
@@ -49,6 +49,7 @@ models/TFBIND8_FL_surrogate_gp.pt filter=lfs diff=lfs merge=lfs -text
 models/AAV_surrogate_gp.pt filter=lfs diff=lfs merge=lfs -text
 models/AAV_FL_surrogate_gp.pt filter=lfs diff=lfs merge=lfs -text
 models/GFP_surrogate_gp.pt filter=lfs diff=lfs merge=lfs -text
+models/DHFR_surrogate_gp.pt filter=lfs diff=lfs merge=lfs -text
 *.gitignore filter=lfs diff=lfs merge=lfs -text
 *.md filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
