--- a/.gitattributes
+++ b/.gitattributes
@@ -51,6 +51,7 @@ models/AAV_FL_surrogate_gp.pt filter=lfs diff=lfs merge=lfs -text
 models/GFP_surrogate_gp.pt filter=lfs diff=lfs merge=lfs -text
 models/DHFR_surrogate_gp.pt filter=lfs diff=lfs merge=lfs -text
 models/AAV_prior_ar.pt filter=lfs diff=lfs merge=lfs -text
+models/GFP_prior_ar.pt filter=lfs diff=lfs merge=lfs -text
 *.gitignore filter=lfs diff=lfs merge=lfs -text
 *.md filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
