--- a/.gitattributes
+++ b/.gitattributes
@@ -52,6 +52,7 @@ models/GFP_surrogate_gp.pt filter=lfs diff=lfs merge=lfs -text
 models/DHFR_surrogate_gp.pt filter=lfs diff=lfs merge=lfs -text
 models/AAV_prior_ar.pt filter=lfs diff=lfs merge=lfs -text
 models/GFP_prior_ar.pt filter=lfs diff=lfs merge=lfs -text
+models/TFBIND8_surrogate_gp.pt filter=lfs diff=lfs merge=lfs -text
 *.gitignore filter=lfs diff=lfs merge=lfs -text
 *.md filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
