--- a/.gitattributes
+++ b/.gitattributes
@@ -54,6 +54,7 @@ models/AAV_prior_ar.pt filter=lfs diff=lfs merge=lfs -text
 models/GFP_prior_ar.pt filter=lfs diff=lfs merge=lfs -text
 models/TFBIND8_surrogate_gp.pt filter=lfs diff=lfs merge=lfs -text
 models/GFP_prior_lstm.pt filter=lfs diff=lfs merge=lfs -text
+models/AAV_prior_lstm.pt filter=lfs diff=lfs merge=lfs -text
 *.gitignore filter=lfs diff=lfs merge=lfs -text
 *.md filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
