fixing squashed git lfs tracking

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,18 +1,33 @@
-data/DHFR/*.csv filter=lfs diff=lfs merge=lfs -text
-data/TFBIND8/*.npy filter=lfs diff=lfs merge=lfs -text
-data/TFBIND8/*.csv filter=lfs diff=lfs merge=lfs -text
-data/GFP/*.csv filter=lfs diff=lfs merge=lfs -text
-data/GFP/mutations_7/percentile_0.1_0.3/*.csv filter=lfs diff=lfs merge=lfs -text
-data/GFP/mutations_6/percentile_0.2_0.4/*.csv filter=lfs diff=lfs merge=lfs -text
-data/GFP/mutations_0/percentile_0.5_0.6/*.csv filter=lfs diff=lfs merge=lfs -text
-data/GFP/mutations_0/percentile_0.0_1.0/*.csv filter=lfs diff=lfs merge=lfs -text
+data/DHFR/DHFR_fitness_data_wt.csv filter=lfs diff=lfs merge=lfs -text
+data/DHFR/FL_surrogate_training_data.csv filter=lfs diff=lfs merge=lfs -text
+data/DHFR/surrogate_training_data.csv filter=lfs diff=lfs merge=lfs -text
+data/TFBIND8/FL_surrogate_training_data.csv filter=lfs diff=lfs merge=lfs -text
+data/TFBIND8/surrogate_training_data.csv filter=lfs diff=lfs merge=lfs -text
+data/TFBIND8/tf_bind_8.csv filter=lfs diff=lfs merge=lfs -text
+data/TRPB/FL_surrogate_training_data.csv filter=lfs diff=lfs merge=lfs -text
+data/TRPB/four-site_simplified_AA_data.csv filter=lfs diff=lfs merge=lfs -text
+data/TRPB/surrogate_training_data.csv filter=lfs diff=lfs merge=lfs -text
+data/GFP/ground_truth.csv filter=lfs diff=lfs merge=lfs -text
+data/GFP/FL_surrogate_training_data.csv filter=lfs diff=lfs merge=lfs -text
 data/GFP/surrogate_training_data.csv filter=lfs diff=lfs merge=lfs -text
-data/AAV/*.csv filter=lfs diff=lfs merge=lfs -text
-data/AAV/mutations_7/percentile_0.1_0.3/*.csv filter=lfs diff=lfs merge=lfs -text
-data/AAV/mutations_6/percentile_0.2_0.4/*.csv filter=lfs diff=lfs merge=lfs -text
-data/AAV/mutations_0/percentile_0.5_0.6/*.csv filter=lfs diff=lfs merge=lfs -text
-data/AAV/mutations_0/percentile_0.0_1.0/*.csv filter=lfs diff=lfs merge=lfs -text
+data/AAV/surrogate_training_data.csv filter=lfs diff=lfs merge=lfs -text
 data/AAV/FL_surrogate_training_data.csv filter=lfs diff=lfs merge=lfs -text
 data/AAV/ground_truth.csv filter=lfs diff=lfs merge=lfs -text
-data/TRPB/*.csv filter=lfs diff=lfs merge=lfs -text
-models/*.pt filter=lfs diff=lfs merge=lfs -text
+models/AAV_prior.pt filter=lfs diff=lfs merge=lfs -text
+models/GFP_prior.pt filter=lfs diff=lfs merge=lfs -text
+models/GFP_prior_lstm.pt filter=lfs diff=lfs merge=lfs -text
+models/GFP_surrogate_cnn.pt filter=lfs diff=lfs merge=lfs -text
+models/TRPB_FL_surrogate_gp.pt filter=lfs diff=lfs merge=lfs -text
+models/aav_cnn_oracle.pt filter=lfs diff=lfs merge=lfs -text
+models/AAV_prior_ar.pt filter=lfs diff=lfs merge=lfs -text
+models/DHFR_FL_surrogate_nn.pt filter=lfs diff=lfs merge=lfs -text
+models/AAV_surrogate_cnn.pt filter=lfs diff=lfs merge=lfs -text
+models/GFP_prior_ar.pt filter=lfs diff=lfs merge=lfs -text
+models/TRPB_FL_surrogate_nn.pt filter=lfs diff=lfs merge=lfs -text
+models/gfp_cnn_oracle.pt filter=lfs diff=lfs merge=lfs -text
+models/AAV_prior_lstm.pt filter=lfs diff=lfs merge=lfs -text
+models/AAV_surrogate_gp.pt filter=lfs diff=lfs merge=lfs -text
+models/DHFR_FL_surrogate_gp.pt filter=lfs diff=lfs merge=lfs -text
+models/GFP_surrogate_gp.pt filter=lfs diff=lfs merge=lfs -text
+models/TFBIND8_FL_surrogate_gp.pt filter=lfs diff=lfs merge=lfs -text
+models/TFBIND8_FL_surrogate_nn.pt filter=lfs diff=lfs merge=lfs -text
