--- a/.gitattributes
+++ b/.gitattributes
@@ -13,21 +13,7 @@ data/GFP/surrogate_training_data.csv filter=lfs diff=lfs merge=lfs -text
 data/AAV/surrogate_training_data.csv filter=lfs diff=lfs merge=lfs -text
 data/AAV/FL_surrogate_training_data.csv filter=lfs diff=lfs merge=lfs -text
 data/AAV/ground_truth.csv filter=lfs diff=lfs merge=lfs -text
-models/AAV_prior.pt filter=lfs diff=lfs merge=lfs -text
-models/GFP_prior.pt filter=lfs diff=lfs merge=lfs -text
-models/GFP_prior_lstm.pt filter=lfs diff=lfs merge=lfs -text
-models/GFP_surrogate_cnn.pt filter=lfs diff=lfs merge=lfs -text
-models/TRPB_FL_surrogate_gp.pt filter=lfs diff=lfs merge=lfs -text
 models/aav_cnn_oracle.pt filter=lfs diff=lfs merge=lfs -text
-models/AAV_prior_ar.pt filter=lfs diff=lfs merge=lfs -text
-models/DHFR_FL_surrogate_nn.pt filter=lfs diff=lfs merge=lfs -text
-models/AAV_surrogate_cnn.pt filter=lfs diff=lfs merge=lfs -text
-models/GFP_prior_ar.pt filter=lfs diff=lfs merge=lfs -text
-models/TRPB_FL_surrogate_nn.pt filter=lfs diff=lfs merge=lfs -text
 models/gfp_cnn_oracle.pt filter=lfs diff=lfs merge=lfs -text
-models/AAV_prior_lstm.pt filter=lfs diff=lfs merge=lfs -text
-models/AAV_surrogate_gp.pt filter=lfs diff=lfs merge=lfs -text
-models/DHFR_FL_surrogate_gp.pt filter=lfs diff=lfs merge=lfs -text
-models/GFP_surrogate_gp.pt filter=lfs diff=lfs merge=lfs -text
-models/TFBIND8_FL_surrogate_gp.pt filter=lfs diff=lfs merge=lfs -text
-models/TFBIND8_FL_surrogate_nn.pt filter=lfs diff=lfs merge=lfs -text
+data/rfp_pdbs/proxy_rfp_seed_data.csv filter=lfs diff=lfs merge=lfs -text
+data/rfp_pdbs/rfp_training_cache.csv filter=lfs diff=lfs merge=lfs -text
